<resources>
    <string name="app_name">PollyGlot</string>
    <string name="aleph">ا</string>
    <string name="be">ب</string>
    <string name="pe">پ</string>
    <string name="te">ت</string>
    <string name="se">ث</string>
    <string name="jim">ج</string>
    <string name="che">چ</string>
    <string name="hejimi">ح</string>
    <string name="khe">خ</string>
    <string name="daal">د</string>
    <string name="zaal">ذ</string>
    <string name="re">ر</string>
    <string name="ze">ز</string>
    <string name="zhe">ژ</string>
    <string name="sin">س</string>
    <string name="shin">ش</string>
    <string name="saad">ص</string>
    <string name="zaad">ض</string>
    <string name="taa">ط</string>
    <string name="zaa">ظ</string>
    <string name="ein">ع</string>
    <string name="ghein">غ</string>
    <string name="fe">ف</string>
    <string name="qaaf">ق</string>
    <string name="kaaf">ک</string>
    <string name="gaaf">گ</string>
    <string name="laam">ل</string>
    <string name="mim">م</string>
    <string name="nun">ن</string>
    <string name="vaav">و</string>
    <string name="hedocheshm">ه</string>
    <string name="ye">ی</string>

    <string name="alaan">الان</string>
    <string name="anglisi">انگلیسی میدونی؟</string>
    <string name="awb">آب</string>
    <string name="az_hastam">از () هستم</string>
    <string name="azkoja">از کجا هستی؟</string>
    <string name="az">از</string>
    <string name="bale">بله</string>
    <string name="chahaar">۴ چهار</string>
    <string name="chekhabar">چه خبر؟</string>
    <string name="chetoori">چطوری؟</string>
    <string name="da">۱۰ ده</string>
    <string name="d_o">۲ دو</string>
    <string name="emrooz">امروز</string>
    <string name="esm">اسم</string>
    <string name="esmet">اسمت چیست؟</string>
    <string name="farsi">فارسی میدونی؟</string>
    <string name="ghazaa">غذا</string>
    <string name="haft">۷ هفت</string>
    <string name="hasht">۸ هشت</string>
    <string name="in">این</string>
    <string name="khoda">خدا حافظ</string>
    <string name="khoobam">خوبم</string>
    <string name="khoshvaqtam">خوشوقتم</string>
    <string name="kojaa">از کجا</string>
    <string name="mamnoon">ممنون</string>
    <string name="na">نه</string>
    <string name="no">۹ نو</string>
    <string name="panj">۵ پنج</string>
    <string name="salaam">سلام</string>
    <string name="salaamati">سلامتی</string>
    <string name="se3">۳ سه</string>
    <string name="shesh">۶ شش</string>
    <string name="yek">۱ یک</string>
    <string name="back">Back</string>
</resources>