<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Alphabet">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/aleph"
                android:textSize="39sp"/>

            <Button
                android:id="@+id/button42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/be"
                android:textSize="39sp" />

            <Button
                android:id="@+id/button43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/pe"
                android:textSize="39sp"/>

            <Button
                android:id="@+id/button44"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:text="Button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button45"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button46"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button47"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button48"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:text="Button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button49"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button50"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button51"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button52"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:text="Button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button53"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button54"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button55"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button56"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:text="Button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button57"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button58"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button59"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button60"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:text="Button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button61"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button62"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button63"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button64"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:text="Button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button65"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button66"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button67"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button68"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:text="Button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button69"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button70"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button71"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginRight="5dp"
                android:text="Button" />

            <Button
                android:id="@+id/button72"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:text="Button" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>